changed to Error Page instead, tested